# fastapi-k8s

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  KUBERNETES.md  Makefile  README.md  k8s.yaml  main.py  mkdocs.yml  package.json  pyproject.toml  slides.md
.github/workflows/: pages.yml
docs/: index.md
docs/kubernetes/: cheatsheet.md  configuration-and-secrets.md  core-concepts.md  deploying-and-verifying.md  dockerfile.md  features.md  first-deployment.md  helm.md  hpa.md  monitoring.md  networking.md  next-steps.md  persistent-storage.md  redis.md  resource-management.md  rolling-updates.md  scaling.md  self-healing.md  troubleshooting.md  what-is-kubernetes.md  what-we-learned.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-secret.yaml  redis-service.yaml  service.yaml
k8s/: hpa.yaml  redis-secret.yaml  redis.yaml
src/fastapi_k8s/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_auth.py  test_basic.py  test_redis.py
